<resources>
    <string name="app_name">DeviceManager</string>

    <string-array name="branch">
        <item>สาขาสำนักงานใหญ่</item>
        <item>สาขาเชียงใหม่</item>
        <item>สาขานนทบุรี</item>
    </string-array>
    <string-array name="device_types">
        <item>Building</item>
        <item>Device and Accessory</item>
        <item>Furniture</item>
        <item>Others</item>
    </string-array>

    <string-array name="building">
        <item>BUILDING</item>
    </string-array>

    <string-array name="allType">
        <item>ACCESS POINT</item>
        <item>ADAPTER</item>
        <item>AIR CONDITIONER</item>
        <item>APPLE CARE</item>
        <item>BARCODE READER</item>
        <item>BATTERY</item>
        <item>BICYCLE</item>
        <item>CABINET</item>
        <item>CAMERA</item>
        <item>CAR</item>
        <item>CARD READER</item>
        <item>CARPET</item>
        <item>CART</item>
        <item>CASH DRAWER</item>
        <item>CHAIR</item>
        <item>CHARGER</item>
        <item>CHROMECAST</item>
        <item>CLOTHES DRYERS</item>
        <item>COFFEE MACHINE</item>
        <item>COMPUTER</item>
        <item>COUNTER</item>
        <item>CURTAIN</item>
        <item>DEVELOPER PROGRAM</item>
        <item>DISPLAY PORT</item>
        <item>DOCUMENT SHREDDER</item>
        <item>DONGLE</item>
        <item>DOOR ACCESS</item>
        <item>DRAWER</item>
        <item>E-COMMERCE</item>
        <item>EQUIPMENT</item>
        <item>FAN</item>
        <item>FILM</item>
        <item>FURNITURE</item>
        <item>GAME</item>
        <item>GAS STOVE</item>
        <item>HDD</item>
        <item>IMAC</item>
        <item>INTERIOR DECORATION</item>
        <item>PAD</item>
        <item>IPAD COVER</item>
        <item>IPOD</item>
        <item>ITEM</item>
        <item>JUICE BLENDER</item>
        <item>KEYBOARD</item>
        <item>KITCHEN</item>
        <item>LABEL PRINTER</item>
        <item>LAMP</item>
        <item>LAPTOP</item>
        <item>LOCKER</item>
        <item>MICRO SD CARD</item>
        <item>MINIDRIVE</item>
        <item>MIRCROWAVE</item>
        <item>MOBILE PHONE</item>
        <item>MODEM ROUTER</item>
        <item>MONITOR</item>
        <item>NETWORK SWITCH</item>
        <item>POCKET WIFI</item>
        <item>POWER BANK</item>
        <item>POWER SUPPLIER</item>
        <item>PRINTER</item>
        <item>PROGRAM</item>
        <item>REFRIGERATOR</item>
        <item>RICE COOKER</item>
        <item>ROUTER</item>
        <item>SCANNER</item>
        <item>SERVER</item>
        <item>SERVER CABINET</item>
        <item>SHELVES</item>
        <item>SINK</item>
        <item>SOFA</item>
        <item>SOFTWARE</item>
        <item>SOLID STATE DRIVE</item>
        <item>SSD</item>
        <item>STOOL</item>
        <item>SWING</item>
        <item>TABLE</item>
        <item>TABLET</item>
        <item>TELEPHONE</item>
        <item>USB</item>
        <item>WASHING MACHINE</item>
        <item>WATCH</item>
        <item>WATER HEATER</item>
        <item>WATER PUMP</item>
        <item>WHITE BOARD</item>
        <item>WIRELESS</item>
        <item>ขาแขวน</item>
        <item>อุปกรณ์คอมพิวเตอร์</item>
    </string-array>

    <string-array name="device_and_accessory">
        <item>ACCESS POINT</item>
        <item>ADAPTER</item>
        <item>APPLE CARE</item>
        <item>BATTERY</item>
        <item>CARD READER</item>
        <item>CHARGER</item>
        <item>CHROMECAST</item>
        <item>COMPUTER</item>
        <item>DEVELOPER PROGRAM</item>
        <item>DISPLAY PORT</item>
        <item>DONGLE</item>
        <item>E-COMMERCE</item>
        <item>GAME</item>
        <item>HDD</item>
        <item>IMAC</item>
        <item>IPAD</item>
        <item>IPAD COVER</item>
        <item>IPOD</item>
        <item>ITEM</item>
        <item>KEYBOARD</item>
        <item>LAPTOP</item>
        <item>MICRO SD CARD</item>
        <item>MINIDRIVE</item>
        <item>MOBILE PHONE</item>
        <item>MODEM ROUTER</item>
        <item>MONITOR</item>
        <item>NETWORK SWITCH</item>
        <item>POCKET WIFI</item>
        <item>POWER BANK</item>
        <item>POWER SUPPLIER</item>
        <item>PROGRAM</item>
        <item>ROUTER</item>
        <item>SERVER</item>
        <item>SERVER CABINET</item>
        <item>SOFTWARE</item>
        <item>SOLID STATE DRIVE </item>
        <item>SSD</item>
        <item>TABLET</item>
        <item>USB</item>
        <item>WIRELESS</item>
        <item>ขาแขวน</item>
        <item>อุปกรณ์คอมพิวเตอร์</item>
    </string-array>

    <string-array name="furniture">
        <item>AIR CONDITIONER</item>
        <item>BARCODE READER</item>
        <item>CABINET</item>
        <item>CAMERA</item>
        <item>CARPET</item>
        <item>CART</item>
        <item>CASH DRAWER</item>
        <item>CHAIR</item>
        <item>CLOTHES DRYERS</item>
        <item>COFFEE MACHINE</item>
        <item>COUNTER</item>
        <item>CURTAIN</item>
        <item>DOCUMENT SHREDDER</item>
        <item>DOOR ACCESS</item>
        <item>DRAWER</item>
        <item>EQUIPMENT</item>
        <item>FAN</item>
        <item>FILM</item>
        <item>FURNITURE</item>
        <item>GAS STOVE</item>
        <item>INTERIOR DECORATION</item>
        <item>JUICE BLENDER</item>
        <item>KITCHEN</item>
        <item>LABEL PRINTER</item>
        <item>LAMP</item>
        <item>LOCKER</item>
        <item>MIRCROWAVE</item>
        <item>PRINTER</item>
        <item>REFRIGERATOR</item>
        <item>RICE COOKER</item>
        <item>SHELVES</item>
        <item>SINK</item>
        <item>SOFA</item>
        <item>STOOL</item>
        <item>SWING</item>
        <item>TABLE</item>
        <item>TELEPHONE</item>
        <item>TELEVISION</item>
        <item>WASHING MACHINE</item>
        <item>WATCH</item>
        <item>WATER HEATER</item>
        <item>WATER PUMP</item>
        <item>WHITE BOARD</item>
    </string-array>

    <string-array name="other">
        <item>BICYCLE</item>
        <item>CAR</item>
    </string-array>
    <string-array name="other_summary">
        <item>BICYCLE</item>
        <item>BUILDING</item>
        <item>CAR</item>
    </string-array>

    <string-array name="filter">
        <item>All</item>
        <item>Available</item>
        <item>Active</item>
    </string-array>

    <string-array name="sort_by">
        <item>Date ▲</item>
        <item>Date ▼</item>
        <item>Brand ▲</item>
        <item>Brand ▼</item>
    </string-array>

    <string name="search">Search</string>
    <string name="summary">Summary</string>
    <string name="check">Check</string>
    <string name="add">Add</string>
    <string name="add_device">Add Device</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="device_detail">Device Detail</string>
    <string name="edit_device">Edit Device</string>
    <string name="dialog_msg_confirm">Save the Data?</string>
    <string name="dialog_msg_cancel">Discard data?</string>
    <string name="dialog_msg_add">Do you want to add this Device?</string>
    <string name="dialog_msg_head_check_serial">This serial already exist.</string>
    <string name="dialog_msg_check_serial">Go to the Detail Page?</string>
    <string name="dialog_msg_checked">Check this device?</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="in_use">In Use</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="digio_email">digio.co.th</string>
    <string name="added_date">Added Date</string>
    <string name="last_check">Last Check</string>
    <string name="price">Price</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="details">Details</string>
    <string name="device_details">Device Details</string>
    <string name="serial_number">Serial Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="choose_item_type">Choose item type</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="item_details">Item Details</string>
    <string name="item_detail">Item Detail</string>
    <string name="note">Note</string>
    <string name="more">More</string>
    <string name="depreciation_rate">Depreciation Rate</string>
    <string name="accumulated_depreciation">อัตราค่าเสื่อม(%)</string>
    <string name="forward_depreciation">ค่าเสื่อมยกมา</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="number_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="text">TEXT</string>
    <string name="barcode">barcode</string>
    <string name="total">Total</string>
    <string name="available">Available</string>
    <string name="active">Active</string>
    <string name="other">Other</string>
    <string name="furniture">Furniture</string>
    <string name="device">Device</string>
    <string name="laptop">Laptop</string>
    <string name="all">All</string>
    <string name="depreciation_inYear">ค่าเสื่อมราคาในปี</string>
    <string name="accumulate_depreciation">ค่าเสื่อมสะสมรวมปีนี้</string>
    <string name="forwarded_budget">มูลค่ายกไป</string>
    <string name="detail">detail</string>
    <string name="warranty_years">Warranty(Years)</string>
    <string name="warranty">Warranty</string>
    <string name="price_unit">Price/Unit</string>
</resources>
